--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.8.5"
+    "enzyme": "^2.8.2",
+    "react-addons-test-utils": "^15.6.0",
+    "react-scripts": "0.8.5",
+    "redux-mock-store": "^1.2.3"
   },
   "dependencies": {
     "axios": "^0.16.2",
